@@ -1,8 +1,8 @@
 module Facebooker #:nodoc:
   module VERSION #:nodoc:
     MAJOR = 0
-    MINOR = 5
-    TINY  = 0
+    MINOR = 9
+    TINY  = 5
 
     STRING = [MAJOR, MINOR, TINY].join('.')
   end
